# File-Statistics-Analyzer

./: CMakeLists.txt  LICENSE  README.md
file_statistics_analyzer/: FileStatAnalyzer  README.am-AM.md  README.md
file_statistics_analyzer/include/: FileSystemAnalyzer.hpp
file_statistics_analyzer/src/: LogAnalyzer.cpp  main.cpp
include/: LogAnalyzer.hpp  ReportGenerator.hpp
src/: FileSystemAnalyzer.cpp  ReportGenerator.cpp
